Feat: Add login

--- a/front/public/locales/en/loginPage.json
+++ b/front/public/locales/en/loginPage.json
@@ -1,3 +1,11 @@
 {
-    "login": "Login"
+    "login": "Login",
+    "forgotPassword": "Forgot password",
+    "emailPlaceholder": "Email",
+    "connectAccount": "Connect to your account",
+    "yourEmail": "Your email",
+    "password": "Password",
+    "signUp": "Sign up",
+    "noAccount": "No account yet?",
+    "returnHome": "Return to home"
 }
